--- a/source/_posts/2020_12_13.md
+++ b/source/_posts/2020_12_13.md
@@ -28,4 +28,8 @@ tag: [约翰福音，以赛亚书]
 
 所以，如今我们要为自己的不信负责。**爱人的荣耀，多过爱神的荣耀，不是真信，乃是假信。**
 
-耶稣基督就是黑暗世界的光。如果我们看见了光，却还想留在黑暗里，罪就已经定了。
+耶稣基督就是黑暗世界的光。如果我们看见了光，却还想留在黑暗里，罪就已经定了。然而，耶稣基督仍然把救赎的大门敞开：
+
+> 人若听见我 的话却不遵守的，我不审判他，因为我来不是要审判世人，而是要拯救世人。
+
+这是耶稣第一次来到世界的目的，但是耶稣也应许，他会第二次来到世界，进行审判，而他现在所讲的道就会给世人定罪，永远的留在黑暗里。
