--- a/source/_posts/2020_12_13.md
+++ b/source/_posts/2020_12_13.md
@@ -7,6 +7,8 @@ tags: [约翰福因，以赛亚书]
 
 # 人为什么难以接受耶稣？
 
+> *我是光，我到世上来，叫所有信我的不住在黑暗里*
+
 人的不信也在神的计划之内，以赛亚先知在公元前700年前后，看到了一个异象：他看到了一个受苦的神的仆人，这个仆人被人藐视，不被人接受。
 
 耶稣在讲道的时候，引用了以赛亚先知的异象：
