--- a/source/_posts/6004_1.md
+++ b/source/_posts/6004_1.md
@@ -3,6 +3,7 @@ title: 6.004 Basic of information
 date: 2020-12-19
 tags: [6.004, Information]
 categories: Computing
+mathjax: true
 ---
 
 # 6.004 Basic of information
